<resources>
    <string name="app_name">PFI</string>
    <string name="placeholder" translatable="false">PLACEHOLDER</string>

    <string name="show_details">Afficher les détails</string>

    <!-- NAVIGATION BAR -->
    <string name="activity_liste_name">Liste</string>
    <string name="activity_product_details_name">Détails</string>
    <string name="navigation_panier">Voir mon panier</string>
    <string name="navigation_account">Voir mon compte</string>
    <string name="navigation_language">Changer langue</string>

    <!-- TOASTS -->
    <string name="login_error">Votre nom ou votre mot de passe est invalide</string>

    <!-- LOGIN -->
    <string name="login_titre">Connectez-vous! </string>
    <string name="login_Entrez_nom">Entrez votre nom</string>
    <string name="login_Entrez_mdp">Entrez votre mot de passe</string>
    <string name="login_btn_connection">Connection</string>

    <!-- ACCOUNT -->
    <string name="account_pub">Publicité</string>
    <string name="account_mdp">Mot de passe</string>
    <string name="account_rate_review">Mettre une note sur l\'application</string>
    <string name="account_rate_review_bad">Oh, désolé de l\'entendre</string>
    <string name="account_rate_review_good">Youpi</string>
    <!-- CATEGORY -->
    <string name="category_fruits">Fruits et Légumes</string>
    <string name="category_cereals">Produits céréaliers et légumineuses</string>
    <string name="category_diary">Produits laitiers</string>
    <string name="category_meat">Viande, poisson et fruits de mer</string>

    <!-- ARTICLE -->
    <string name="article_no_name">Nom indéfini</string>
    <string name="article_no_description">Description indéfinie</string>
    <string name="article_no_price">Prix indéfini</string>

    <string name="article_name_banane">Banane</string>
    <string name="article_name_carotte">Carotte</string>
    <string name="article_name_pomme">Pomme</string>
    <string name="article_name_raisin">Raisin</string>
    <string name="article_name_peche">Pêche</string>

    <string name="article_name_pois">Pois</string>
    <string name="article_name_pain">Pain</string>
    <string name="article_name_mais">Maïs</string>

    <string name="article_name_lait">Lait</string>
    <string name="article_name_beurre">Beurre</string>
    <string name="article_name_yaourt">Yaourt</string>
    <string name="article_name_fromage">Fromage</string>

    <string name="article_name_viande">Viande</string>
    <string name="article_name_poisson">Poisson</string>
    <string name="article_name_homard">Homard</string>

    <!-- ARTICLE PRIX -->
    <string name="article_banane_prix" translatable="false">3.99</string>
    <string name="article_carotte_prix" translatable="false">4.99</string>
    <string name="article_pomme_prix" translatable="false">1.00</string>
    <string name="article_raisin_prix" translatable="false">3.49</string>
    <string name="article_peche_prix" translatable="false"> 2.00</string>

    <string name="article_pois_prix" translatable="false">9.99</string>
    <string name="article_pain_prix" translatable="false">2.50</string>
    <string name="article_mais_prix" translatable="false">5.00</string>

    <string name="article_lait_prix" translatable="false">4.99</string>
    <string name="article_beurre_prix" translatable="false">6.00</string>
    <string name="article_yaourt_prix" translatable="false">7.50</string>
    <string name="article_fromage_prix" translatable="false">10.99</string>

    <string name="article_viande_prix" translatable="false">15.99</string>
    <string name="article_poisson_prix" translatable="false">20.00</string>
    <string name="article_homard_prix" translatable="false">22.50</string>

    <!-- ARTICLE descriptions  -->
    <string name="article_banane_desc">Moelleuse et incomparable, la banane est un fruit populaire pour son bon goût et sa polyvalence.</string>
    <string name="article_carotte_desc">Excellente source de vitamine A et de fibres alimentaires, les carottes sont surtout servies comme accompagnement alors qu\'elles pourraient carrément être la vedette.</string>
    <string name="article_pomme_desc">Pour une petite touche sucrée et acidulée dans vos soupes et potages, pensez à ajouter des pommes dans vos recettes.</string>
    <string name="article_raisin_desc">Le raisin est une bonne source de potassium et contient de la vitamine C, de la thiamine et de la vitamine B6.</string>
    <string name="article_peche_desc"> La pêche regorge de vitamines, de fibres alimentaires et d\'antioxydants, mais pour en tirer tous les bénéfices, il est indispensable de les consommer avec la peau</string>

    <string name="article_pois_desc">D\'une texture relativement pâteuse, ces graines se prêtent à une infinie variété de préparations depuis les entrées, les soupes et les plats principaux</string>
    <string name="article_pain_desc">Pain frais et délicieux pour accompagner vos repas et collations.</string>
    <string name="article_mais_desc">Le maïs est un ingrédient des plus polyvalents qui sert à concocter plusieurs recettes</string>

    <string name="article_lait_desc">Ce lait est un aliment du Québec qui se démarque grâce à son goût riche et onctueux. </string>
    <string name="article_beurre_desc">Le beurre, délicieux et polyvalent, est un ingrédient essentiel de la liste d\'épicerie de tous cuisiniers. Le beurre rehausse réellement le goût des plats.</string>
    <string name="article_yaourt_desc">Le yogourt, fait à partir du lait canadien, est un véritable délice laitier.</string>
    <string name="article_fromage_desc"> Vous découvrez des fromages savoureux dans toutes les régions du Québec. Et tout est disponible dans une Épicerie près de chez vous!</string>

    <string name="article_viande_desc">On vous propose des viandes d\'ici de qualité, des poissons et fruits de mer savoureux et plus encore.</string>
    <string name="article_poisson_desc">Ce poisson en pâte est une source de polyinsaturés oméga-3 et de protéines. Il est sans agents de conservation et sans arômes ni colorants artificiels.</string>
    <string name="article_homard_desc">Nos homards proviennent tous de l\'Atlantique. La chair de homard est pauvre en calories et est une excellente source de protéines et d\'oméga-3.</string>

    <!-- PANIER -->
    <string name="panier_titre">Panier</string>
    <string name="item_panier_quantité">quantité</string>
    <string name="panier_viderPanier">Vider le panier</string>
    <string name="panier_allerCaisse">Passer à la caisse</string>
    <string name="panier_total_label" translatable="false">TOTAL : </string>
    <string name="add_to_panier">Ajouter au panier</string>
    <string name="remove_from_panier">Retirer du panier</string>
    <string name="article_remove_on_update">L\'article \'${0}\' va être retiré du panier lors de la fermeture de cette page</string>

    <!-- PRIX -->
    <string name="price_display">${0} $</string>

    <!-- PRODUCT PREVIEW -->
    <string name="article_quantity_remaining">Il reste ${0} en stock.</string>
    <string name="retour_txt">RETOUR</string>

    <!--CONFIRMATION DIALOG-->
    <string name="confirmation_texte">Voulez-vous vraiment acheter le panier?</string>
    <string name="confirmation_btn_oui">Oui</string>
    <string name="confirmation_btn_non">Non</string>
</resources>